fixed meal modal overflow issue and updated meal form styling

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,27 @@
   
 }
 
+/* Scrollbar settings */
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 .page-button{
   display: flex;
   width:max-content;
@@ -60,7 +81,7 @@
   column-count: 2;
   margin-top:20px;
   padding-inline:0px;
-  width: 300px;
+  width: 200px;
 }
 
 .form p input,
@@ -348,17 +369,37 @@ justify-content: center;
 #meal-form p input{
   border: 1px solid var(--main-color);
   margin-right: 20px;
-
 }
 
+.meal-form-container{
+  width: 50%;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 #meal-submit{
   padding-inline: 30px;
 }
 
 .add-button {
-  padding: 5px 10px;
-  margin: 5px;
-  font-size: 12px;
+background-color: var(--dark-accent);
+padding-block: 10px;
+width: 150px;
+margin-bottom: 20px;
+}
+
+#meal-list{
+  height: 200px;
+  width:100%;
+  overflow-y: scroll;
+  text-align: center;
+}
+
+.list-container{
+  min-width:400px;
+  text-align: center;
+  margin-top: 30px;
 }
 
 /* Footer */
